fix bg popup + border color dark mode

--- a/ChatSphere/css/index.css
+++ b/ChatSphere/css/index.css
@@ -1,3 +1,7 @@
+:is(.dark *) {
+    border-color: #2e2e2e
+}
+
 body {
     margin: 0;
 }
